k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: notes-app
  namespace: notes-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: notes-app

  template:
    metadata:
      labels:
        app: notes-app

    spec:
      containers:
        - name: notes-app
          image: rupeshh7/notes-app:latest
          ports:
            - containerPort: 8000
