k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: notes-app
  namespace: notes-app

spec:
  selector:
    app: notes-app

  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

  type: ClusterIP
